--- a/index.ejs
+++ b/index.ejs
@@ -141,7 +141,7 @@
             <td style="background-color: #eee">Almuerzo</td>
           </tr>
           <tr>
-            <td class="highlight">13:45hs</td>
+            <td class="highlight">13:30hs</td>
             <td>Identidad</td>
           </tr>
           <tr>
@@ -161,7 +161,11 @@
             <td>Lab: Deployando a un PaaS (Heroku o Windows Azure)</td>
           </tr>
           <tr>
-            <td class="highlight">17:30hs</td>
+            <td class="highlight">17:15hs</td>
+            <td>Realtime Web: socket.io</td>
+          </tr>
+          <tr>
+            <td class="highlight">18:00hs</td>
             <td>Fin de curso</td>
           </tr>
         </tbody>
