--- a/index.ejs
+++ b/index.ejs
@@ -16,6 +16,7 @@
 <link rel="stylesheet" media="screen" href="css/reset.css"/>
 <link rel="stylesheet" media="screen" href="css/style.css"/>
 <link rel="stylesheet" media="screen"  href="css/nivo-slider.css"/>
+<link rel="stylesheet" media="screen"  href="css/default/default.css"/>
 <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
 
 <!--jquery libraries others are at the bottom-->
@@ -53,7 +54,7 @@
     <h3>Bootcamps anteriores</h3>
     
     <!--slider_bg starts-->
-    <div id="slider_bg"> 
+    <div class="slider-wrapper theme-default">
       <!--remember to specify height and width of slider images-->
       <div id="slider" class="nivoSlider"><img src="images/preview/1.jpg" width="740" height="416"><img src="images/preview/2.jpg" width="740" height="416"><img src="images/preview/3.jpg" width="740" height="416"><img src="images/preview/4.jpg" width="740" height="416"><img src="images/preview/5.jpg" width="740" height="416"><img src="images/preview/6.jpg" width="740" height="416"></div>
     </div>
