--- a/index.ejs
+++ b/index.ejs
@@ -186,7 +186,7 @@
     <div class="wrap">
       <h3>Donde</h3>
       <p>Hotel Felipe II, San Jerónimo 279, Cordoba</p>
-      <div id="map"></div>
+      <iframe width="100%" height="380" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=es-419&amp;geocode=&amp;q=Hotel+Felipe+II,+San+Jer%C3%B3nimo+279,+Cordoba&amp;aq=&amp;sll=-31.398755,-64.186859&amp;sspn=0.58082,1.203003&amp;t=m&amp;ie=UTF8&amp;hq=Hotel+Felipe+II,&amp;hnear=San+Jer%C3%B3nimo+279,+C%C3%B3rdoba,+Argentina&amp;ll=-31.415919,-64.180133&amp;spn=0.00879,0.013733&amp;z=16&amp;iwloc=near&amp;output=embed"></iframe>
     </div>
   </section>
   <!--agenda ends--> 
@@ -231,8 +231,6 @@ Registrate <a href="http://auth0.wufoo.com/forms/z7x4m1">aca</a>.
 <!--Attached jquery files here--> 
 <script src="js/jquery.nivo.slider.pack.js" type="text/javascript"></script> 
 <script src="js/custom.js" type="text/javascript"></script>
-<script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
-<script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.1.2"></script>
 <script type="text/javascript">var z7x4m1;(function(d, t) {
 var s = d.createElement(t), options = {
 'userName':'auth0', 
