--- a/index.ejs
+++ b/index.ejs
@@ -64,17 +64,25 @@
   </div>
   <section id="quotes">
     <h3>quotes</h3>
-    <div>
-      <i class="icon-quote-left icon-2x pull-left icon-muted"></i>Me pareció muy bueno el curso y muy recomendable para cualquier persona que quiera comenzara a ver de que se trata node y todo su entorno
+    <div class="qq">
+      <i class="icon-quote-left icon-2x pull-left icon-muted"></i>
+      <div class="quote">Me pareció muy bueno el curso y muy recomendable para cualquier persona que quiera comenzara a ver de que se trata node y todo su entorno</div>
+      <div class="author"><strong>Andres Lozada Mosto</strong></div>
     </div>
-    <div>
-      <i class="icon-quote-left icon-2x pull-left icon-muted"></i>Con respecto al curso me parecio un excelente trabajo de los oradores, la parte de workshop es fundamental, uno no aprende hasta que no se pone a tocar un poco y entiende de que se trata...
+    <div class="qq">
+      <i class="icon-quote-left icon-2x pull-left icon-muted"></i>
+      <div class="quote">Con respecto al curso me parecio un excelente trabajo de los oradores, la parte de workshop es fundamental, uno no aprende hasta que no se pone a tocar un poco y entiende de que se trata...</div>
+      <div class="author"><strong>Juan García estudiante en UTN</strong></div>
     </div>
-    <div>
-      <i class="icon-quote-left icon-2x pull-left icon-muted"></i>Muy bueno el curso, me gusto la dinámica, el tener que hacer actividades cada 30 minutos como máximo te mantiene activo
+    <div class="qq">
+      <i class="icon-quote-left icon-2x pull-left icon-muted"></i>
+      <div class="quote">Muy bueno el curso, me gusto la dinámica, el tener que hacer actividades cada 30 minutos como máximo te mantiene activo</div>
+      <div class="author"><strong>Leandro Mettini desarrollador en MercadoLibre</strong></div>
     </div>
-    <div>
-      <i class="icon-quote-left icon-2x pull-left icon-muted"></i>Muy bien organizado el #MeQuieroIrAlBootcamp: 8 horas tremendas que se me pasaron volando.
+    <div class="qq">
+      <i class="icon-quote-left icon-2x pull-left icon-muted"></i>
+      <div class="quote">Muy bien organizado el #MeQuieroIrAlBootcamp: 8 horas tremendas que se me pasaron volando.</div>
+      <div class="author"><strong>Diego Ramirez</strong></div>
     </div>
   </section>
   
