--- a/public/css/style.css
+++ b/public/css/style.css
@@ -567,3 +567,26 @@ font-size: 14px;
 	text-align: center;
 	display: inline-block;
 }
+
+#quotes .quote {
+	margin-left: 45px;
+	display: inline-block;
+	margin-top: 0px;
+	margin-bottom: 5px;
+}
+
+#quotes .author {
+	margin-left: 45px;
+	display: inline-block;
+	margin-top: 0px;
+	margin-bottom: 5px;
+	float: right;
+}
+
+#quotes .qq {
+	margin-bottom: 62px;
+}
+
+#quotes .icon-quote-left {
+	position: absolute;
+}
