--- a/public/css/style.css
+++ b/public/css/style.css
@@ -242,7 +242,7 @@ some additional styles are given if you need to use while customization*/
 	display: inline-block;
 }
 
-#header .sub {
+.sub {
 	font-size: 25px;
 	line-height: 39px;
 	text-align: center;
@@ -454,6 +454,16 @@ text-align: left;
 .pricing table {
 	width: 364px;
 	margin: 0 auto;
+}
+
+div .important {
+	font-size: 18px;
+border: 1px solid #ccc;
+background-color: rgb(255, 255, 203);
+padding: 16px;
+margin-top: 0px;
+margin-bottom: 20px;
+line-height: 30px;
 }
 
 .pricing table .highlight {
