--- a/index.ejs
+++ b/index.ejs
@@ -200,7 +200,7 @@
   <!--agenda ends--> 
   <section id="register">
     <h3>Registrate</h3>
-    <div class="important">Nuestra intención no es ganar dinero haciendo esto. Pero poner un precio nos ayuda a dos cosas: 1) asegurarnos que se va a anotar la gente que realmente le interesa y 2) no perder plata <i class="icon-smile"></i>. Hay que pagar el lugar, la comida, la organización y gastos (pasaje de avión, hotel) </div>
+    <div class="important">Nuestra intención no es ganar dinero haciendo esto. Pero poner un precio nos ayuda a dos cosas: 1) asegurarnos que se va a anotar la gente que realmente le interesa y 2) cubrir costos operativos. Hay que pagar el lugar, la comida, la organización y gastos (pasaje de avión, hotel) </div>
     <div class="pricing">
       <table>
         <tbody>
