--- a/index.ejs
+++ b/index.ejs
@@ -31,7 +31,7 @@
   <!--header_top starts-->
   <div id="header_top">
     <h1> <span>Node.js for Startups</span> Bootcamp</h1>
-    <p class="date">NEXT STOP: <span>C&oacute;rdoba</span>, 6 de Septiembre, 2013</p>
+    <p class="date">NEXT STOP: <span>C&oacute;rdoba</span>, Viernes 13 de Septiembre, 2013</p>
     <div class="clear"></div>
   </div>
   <!--header_top ends--> 
