--- a/index.ejs
+++ b/index.ejs
@@ -41,7 +41,7 @@
     
     <!--text starts-->
     <div class="sub">
-      Aparecen cosas nuevas todos los días, pero es dificil encontrar el tiempo para explorarlas todas. Que mejor que dedicar un día entero a meterte de lleno en el <a target="_blank" href="http://blog.mongodb.org/post/49262866911/the-mean-stack-mongodb-expressjs-angularjs-and">MEAN stack</a>, utilizado por muchos startups, de la mano de gente que lo está utilizando en producción? 
+      Aparecen cosas nuevas todos los días, pero es dificil encontrar el tiempo para explorarlas todas. Que mejor que dedicar un día entero a meterte de lleno en el <a target="_blank" href="http://blog.mongodb.org/post/49262866911/the-mean-stack-mongodb-expressjs-angularjs-and">MEAN stack</a> de la mano de gente que lo está utilizando en producción? 
     </div>
     <!--text ends--> 
         
@@ -118,20 +118,20 @@
   <!--agenda starts-->
   <div id="agenda">
     <h3>Agenda</h3>
-    
+    <p>La modalidad es <span class="theory">te&oacute;rica</span>, <span class="practice">pr&aacute;ctica</span> y es necesario que traigas tu laptop con <a href="https://github.com/auth0/nodejs-bootcamp/blob/master/README.md#tools-youll-need" target="_blank">esto instalado</a>.</p>
     <table>
         <tbody>
           <tr>
             <td class="highlight">9:00hs</td>
-            <td>Desayuno y Bienvenida</td>
+            <td style="background-color: #eee">Desayuno y Bienvenida</td>
           </tr>
           <tr>
             <td class="highlight">9:30hs</td>
-            <td>Node.js y Express</td>
+            <td class="theory">Node.js y Express</td>
           </tr>
           <tr>
             <td class="highlight">10:30hs</td>
-            <td>Lab: Creando una app Node.js con Express</td>
+            <td class="practice">Lab: Creando una app Node con Express</td>
           </tr>
           <tr>
             <td class="highlight">11:30hs</td>
@@ -139,11 +139,11 @@
           </tr>
           <tr>
             <td class="highlight">11:45hs</td>
-            <td>MongoDb</td>
+            <td class="theory">Guardando datos (DBs NoSQL)</td>
           </tr>
           <tr>
             <td class="highlight">12:15hs</td>
-            <td>Lab: Utilizando MongoDB </td>
+            <td class="practice">Lab: Utilizando MongoDB</td>
           </tr>
           <tr>
             <td class="highlight">13:00hs</td>
@@ -151,11 +151,11 @@
           </tr>
           <tr>
             <td class="highlight">13:30hs</td>
-            <td>Identidad</td>
+            <td class="theory">Autenticaci&oacute;n en Cloud y Mobile con Individuos y Empresas</td>
           </tr>
           <tr>
             <td class="highlight">14:30hs</td>
-            <td>Lab: Autenticando con Social Providers, User/Passwords y Enterprise Providers</td>
+            <td class="practice">Lab: Autenticando con Social Providers, User/Passwords y Enterprise</td>
           </tr>
           <tr>
             <td class="highlight">15:30hs</td>
@@ -163,19 +163,19 @@
           </tr>
           <tr>
             <td class="highlight">15:45hs</td>
-            <td>Cloud Computing: ventajas, ofertas, workflow</td>
+            <td class="theory">Cloud Computing: IaaS, PaaS, Ventajas/Desventajas</td>
           </tr>
           <tr>
             <td class="highlight">16:15hs</td>
-            <td>Lab: Deployando a un PaaS (Heroku o Windows Azure)</td>
+            <td class="practice">Lab: Deployando a un PaaS (Heroku o Windows Azure)</td>
           </tr>
           <tr>
             <td class="highlight">17:15hs</td>
-            <td>Realtime Web: socket.io</td>
+            <td class="theory">GitHub Workflow: Code Review, Multiple Branches, Pull Requests</td>
           </tr>
           <tr>
             <td class="highlight">18:00hs</td>
-            <td>Fin de curso</td>
+            <td style="background-color: #eee">Fin de curso</td>
           </tr>
         </tbody>
       </table>
@@ -186,9 +186,23 @@
   </div>
   <section id="sponsors">
     <h3>Organiza</h3>
-    <a href="https://auth0.com">
-      <img src="images/auth0.png">
-    </a>
+    <ul>
+      <li>
+        <a href="https://auth0.com" target="_blank">
+          <img src="https://www.dropbox.com/s/8uyo3lv4txg81ab/logo-180x200-letters.png?dl=1" style="width: 50%;">
+        </a>
+      </li>
+      <li>
+        <a href="http://10gen.com" target="_blank">
+          <img src="http://info.10gen.com/rs/10gen/images//10gen_Logo_Full.png">
+        </a>
+      </li>
+      <li>
+        <a href="http://strongloop.com" target="_blank">
+          <img src="http://puu.sh/45Jfy.png">
+        </a>
+      </li>
+    </ul>
   </section>
   <section class="section" id="place">
     <div class="wrap">
@@ -200,25 +214,9 @@
   <!--agenda ends--> 
   <section id="register">
     <h3>Registrate</h3>
-    <div class="important">Nuestra intención no es ganar dinero haciendo esto. Pero poner un precio nos ayuda a dos cosas: 1) asegurarnos que se va a anotar la gente que realmente le interesa y 2) cubrir costos operativos. Hay que pagar el lugar, la comida, la organización y gastos (pasaje de avión, hotel) </div>
     <div class="pricing">
-      <table>
-        <tbody>
-          <tr>
-            <td class="highlight">Hasta el 14/8</td>
-            <td>$700 *</td>
-          </tr>
-          <tr>
-            <td class="highlight">Hasta el 28/8</td>
-            <td>$770 *</td>
-          </tr>
-          <tr>
-            <td class="highlight">Hasta el 6/9</td>
-            <td>$850 *</td>
-          </tr>
-        </tbody>
-      </table>
-      <div class="legend">* Socios del MUG bonifican $200 y hay descuentos para estudiantes</div>
+      AR$ 150 *
+      <div class="legend">* El costo original de este training era entre $700 a $1000 por persona, pero logramos conseguir sponsors que cubran parte de los gastos. Nuestro objetivo no es ganar dinero haciendo esto. Los cupos son limitados.</div>
     </div>
   
   <div id="wufoo-z7x4m1">
