--- a/index.ejs
+++ b/index.ejs
@@ -189,17 +189,22 @@
     <ul>
       <li>
         <a href="https://auth0.com" target="_blank">
-          <img src="https://www.dropbox.com/s/8uyo3lv4txg81ab/logo-180x200-letters.png?dl=1" style="width: 50%;">
+          <img src="/images/auth0.png" style="width: 80%;">
+        </a>
+      </li>
+      <li>
+        <a href="http://github.com" target="_blank">
+          <img src="/images/github.png">
         </a>
       </li>
       <li>
         <a href="http://10gen.com" target="_blank">
-          <img src="http://info.10gen.com/rs/10gen/images//10gen_Logo_Full.png">
+          <img src="/images/10gen-logo.png">
         </a>
       </li>
       <li>
         <a href="http://strongloop.com" target="_blank">
-          <img src="http://puu.sh/45Jfy.png">
+          <img src="/images/strongloop.png">
         </a>
       </li>
     </ul>
