change date and place

--- a/index.ejs
+++ b/index.ejs
@@ -31,7 +31,7 @@
   <!--header_top starts-->
   <div id="header_top">
     <h1> <span>Node.js for Startups</span> Bootcamp</h1>
-    <p class="date">NEXT STOP: <span>C&oacute;rdoba</span>, Viernes 13 de Septiembre, 2013</p>
+    <p class="date">NEXT STOP: <span>C&oacute;rdoba</span>, Viernes 20 de Septiembre, 2013</p>
     <div class="clear"></div>
   </div>
   <!--header_top ends--> 
@@ -212,8 +212,8 @@
   <section class="section" id="place">
     <div class="wrap">
       <h3>Donde</h3>
-      <p>Hotel Felipe II, San Jerónimo 279, Cordoba</p>
-      <iframe width="100%" height="380" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=es-419&amp;geocode=&amp;q=Hotel+Felipe+II,+San+Jer%C3%B3nimo+279,+Cordoba&amp;aq=&amp;sll=-31.398755,-64.186859&amp;sspn=0.58082,1.203003&amp;t=m&amp;ie=UTF8&amp;hq=Hotel+Felipe+II,&amp;hnear=San+Jer%C3%B3nimo+279,+C%C3%B3rdoba,+Argentina&amp;ll=-31.415919,-64.180133&amp;spn=0.00879,0.013733&amp;z=16&amp;iwloc=near&amp;output=embed"></iframe>
+      <p>Gran Hotel Dorá, Entre Rios 70, Córdoba</p>
+      <iframe width="100%" height="380" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Gran+Hotel+Dor%C3%A1+C%C3%B3rdoba+-+Entre+R%C3%ADos,+C%C3%B3rdoba,+Cordoba,+Argentina&amp;aq=0&amp;oq=gran+hotel+dor&amp;sll=37.0625,-95.677068&amp;sspn=42.03917,91.494141&amp;t=h&amp;ie=UTF8&amp;hq=&amp;hnear=&amp;ll=-31.425698,-64.122048&amp;spn=0.006295,0.006295&amp;iwloc=A&amp;iwloc=near&amp;output=embed"></iframe>
     </div>
   </section>
   <!--agenda ends--> 
@@ -221,7 +221,7 @@
     <h3>Registrate</h3>
     <div class="pricing">
       AR$ 150 *
-      <div class="legend">* El costo original de este training era entre $700 a $1000 por persona, pero logramos conseguir sponsors que cubran parte de los gastos. Nuestro objetivo no es ganar dinero haciendo esto. Los cupos son limitados.</div>
+      <div class="legend">* El costo original de este evento era de $700 por persona pero gracias al apoyo de nuestros sponsors se cubrió gran parte de los costos. Los cupos son <strong>limitados</strong>.</div>
     </div>
   
   <div id="wufoo-z7x4m1">
