--- a/index.ejs
+++ b/index.ejs
@@ -213,7 +213,7 @@
     <div class="wrap">
       <h3>Donde</h3>
       <p>Gran Hotel Dorá, Entre Rios 70, Córdoba</p>
-      <iframe width="100%" height="380" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Gran+Hotel+Dor%C3%A1+C%C3%B3rdoba+-+Entre+R%C3%ADos,+C%C3%B3rdoba,+Cordoba,+Argentina&amp;aq=0&amp;oq=gran+hotel+dor&amp;sll=37.0625,-95.677068&amp;sspn=42.03917,91.494141&amp;t=h&amp;ie=UTF8&amp;hq=&amp;hnear=&amp;ll=-31.425698,-64.122048&amp;spn=0.006295,0.006295&amp;iwloc=A&amp;iwloc=near&amp;output=embed"></iframe>
+      <iframe width="100%" height="380" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Entre+R%C3%ADos+70,+C%C3%B3rdoba,+Cordoba,+Argentina&amp;aq=0&amp;oq=entre+rios+70,&amp;sll=-31.423774,-64.122047&amp;sspn=0.011096,0.022337&amp;ie=UTF8&amp;hq=&amp;hnear=Entre+R%C3%ADos+70,+C%C3%B3rdoba,+Argentina&amp;t=m&amp;z=14&amp;iwloc=A&amp;ll=-31.418598,-64.183892&amp;output=embed"></iframe>
     </div>
   </section>
   <!--agenda ends--> 
