--- a/index.ejs
+++ b/index.ejs
@@ -6,8 +6,6 @@
 <meta name="keywords" content="node startup bootcamp" />
 <title>Node.js Startup Bootcamp</title>
 
-<!--favicon-->
-<link rel="shortcut icon" href="images/favicon.ico">
 
 <!--google web font-->
 <link href='http://fonts.googleapis.com/css?family=Lobster+Two:700' rel='stylesheet' type='text/css'>
@@ -220,8 +218,8 @@
   <section id="register">
     <h3>Registrate</h3>
     <div class="pricing">
-      AR$ 150 *
-      <div class="legend">* El costo original de este evento era de $700 por persona pero gracias al apoyo de nuestros sponsors se cubrió gran parte de los costos. Los cupos son <strong>limitados</strong>.</div>
+      <strike>AR$ 250</strike> AR$ 150 *
+      <div class="legend">* Early bird. A partir del 10 de Septiembre el costo sera $250. Los cupos son <strong>limitados</strong>.</div>
     </div>
   
   <div id="wufoo-z7x4m1">
