--- a/index.ejs
+++ b/index.ejs
@@ -211,7 +211,7 @@
     <div class="wrap">
       <h3>Donde</h3>
       <p>Gran Hotel Dorá, Entre Rios 70, Córdoba</p>
-      <iframe width="100%" height="380" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Entre+R%C3%ADos+70,+C%C3%B3rdoba,+Cordoba,+Argentina&amp;aq=0&amp;oq=entre+rios+70,&amp;sll=-31.423774,-64.122047&amp;sspn=0.011096,0.022337&amp;ie=UTF8&amp;hq=&amp;hnear=Entre+R%C3%ADos+70,+C%C3%B3rdoba,+Argentina&amp;t=m&amp;z=14&amp;iwloc=A&amp;ll=-31.418598,-64.183892&amp;output=embed"></iframe>
+      <div id="map"></div>
     </div>
   </section>
   <!--agenda ends--> 
@@ -241,6 +241,8 @@ Registrate <a href="http://auth0.wufoo.com/forms/z7x4m1">aca</a>.
 <!--Attached jquery files here--> 
 <script src="js/jquery.nivo.slider.pack.js" type="text/javascript"></script> 
 <script src="js/custom.js" type="text/javascript"></script>
+<script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
+<script type="text/javascript" src="http://maps.stamen.com/js/tile.stamen.js?v1.1.2"></script>
 <script type="text/javascript">var z7x4m1;(function(d, t) {
 var s = d.createElement(t), options = {
 'userName':'auth0', 
