--- a/index.ejs
+++ b/index.ejs
@@ -205,6 +205,11 @@
           <img src="/images/strongloop.png">
         </a>
       </li>
+      <li>
+        <a href="http://newrelic.com" target="_blank">
+          <img src="/images/newrelic.png">
+        </a>
+      </li>
     </ul>
   </section>
   <section class="section" id="place">
