--- a/index.ejs
+++ b/index.ejs
@@ -224,8 +224,9 @@
     <h3>Registrate</h3>
     <div class="pricing">
       <strike>AR$ 250</strike> AR$ 150 *
-      <div class="legend">* Early bird. A partir del 10 de Septiembre el costo sera $250. Los cupos son <strong>limitados</strong>.</div>
+      <div class="legend">* Early bird. A partir del 11 de Septiembre el costo sera $250. Los cupos son <strong>limitados</strong>.</div>
     </div>
+    <div class="update">SOLD OUT: El bootcamp esta lleno :( pero hay lista de espera.</div>
   
   <div id="wufoo-z7x4m1">
 Registrate <a href="http://auth0.wufoo.com/forms/z7x4m1">aca</a>.
