--- a/public/css/style.css
+++ b/public/css/style.css
@@ -632,3 +632,12 @@ font-size: 14px;
 #sponsors img {
 	max-width: 100%;
 }
+
+.update {
+	text-align: left;
+	font-size: 20px;
+	margin-bottom: 30px;
+	margin-left: 10px;
+	background-color:rgb(238, 178, 183);
+	padding: 18px;
+}
