--- a/index.ejs
+++ b/index.ejs
@@ -34,6 +34,11 @@
   </div>
   <!--header_top ends--> 
   
+  <section>
+    <h3>#buzz</h3>
+    <a class="twitter-timeline" href="https://twitter.com/search?q=%23CbaNodeBootcamp" data-widget-id="380499420841639936">Tweets about "#CbaNodeBootcamp"</a>
+  </section>
+  
   <!--header starts-->
   <div id="header"> 
     
@@ -264,7 +269,6 @@ try { z7x4m1 = new WufooForm();z7x4m1.initialize(options);z7x4m1.display(); } ca
 var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
 })(document, 'script');</script>
   
-
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
